--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -46,9 +46,9 @@
         </div> <!-- col.// -->
         <a href="{% url 'store' %}" class="btn btn-outline-primary">Botteghino</a>
         <div class="col-lg  col-md-6 col-sm-12 col">
-            <form action="#" class="search">
+            <form action="{%url 'search'%}" class="search" method="get">
                 <div class="input-group w-100">
-                    <input type="text" class="form-control" style="width:60%;" placeholder="Search">
+                    <input type="text" class="form-control" style="width:60%;" placeholder="Search" name="keyword">
                     
                     <div class="input-group-append">
                       <button class="btn btn-primary" type="submit">
@@ -67,9 +67,13 @@
                                 <a href="./register.html"> Register</a>
                             </div>
                         </div>
-                        <a href="./cart.html" class="widget-header pl-3 ml-3">
-                            <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-                            <span class="badge badge-pill badge-danger notify">0</span>
+                        <a href="{%url 'cart'%}" class="widget-header pl-3 ml-3">
+                            <div class="icon icon-md rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
+                            {%if not cart_count%}
+                            <span class="badge badge-pill badge-danger notify">Vuoto</span>
+                            {%else%}
+                            <span class="badge badge-pill badge-success">{{cart_count}}</span>
+                            {%endif%}
                         </a>
                     </div> <!-- widgets-wrap.// -->
                 </div> <!-- col.// -->
