Registration and Login system

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -60,12 +60,20 @@
         </div> <!-- col.// -->
         <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
                     <div class="d-flex justify-content-end mb-3 mb-lg-0">
+                        
                         <div class="widget-header">
-                            <small class="title text-muted">Welcome guest!</small>
+                            {%if user.id is not None %}
+                            <small class="title text-muted">Benvenuto {{user.first_name}}</small>
                             <div> 
-                                <a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-                                <a href="./register.html"> Register</a>
+                                <a href="{%url 'login'%}">Pannello controllo</a> <span class="dark-transp"> | </span>
+                                <a href="{%url 'logout'%}"> Esci</a>
                             </div>
+                            {%else%}
+                            <div> 
+                                <a href="{%url 'login'%}">Effettua il login</a> <span class="dark-transp"> | </span>
+                                <a href="{%url 'register'%}"> Registrati</a>
+                            </div>
+                            {%endif%}
                         </div>
                         <a href="{%url 'cart'%}" class="widget-header pl-3 ml-3">
                             <div class="icon icon-md rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
