--- a/templates/accounts/resetPassword.html
+++ b/templates/accounts/resetPassword.html
@@ -6,35 +6,23 @@
 <section class="section-conten padding-y" style="min-height:84vh">
 
     <!-- ============================ COMPONENT LOGIN   ================================= -->
-    {%if request.GET.command == 'verification'%}
-
-    <div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 720px; margin-top: 100px;">
-      Ti abbiamo spedito una mail di verifica dell'identità all'indirizzo [{{request.GET.email}}]
-      <br><br>
-      Mail già verificata? <a href="{%url 'login'%}">Login</a> 
-    </div>
-
-    {%else%}
-    
+   
     <div class="card mx-auto" style="max-width: 512px; margin-top:100px;">
           <div class="card-body">
-          <h4 class="card-title mb-4">Login</h4><h5>fornisci le tue credenziali di accesso</h5>
+          <h4 class="card-title mb-4">Reset della password</h4>
           {%include 'includes/alert.html'%}
-          <form action="{%url 'login'%}" method="POST">
+          <form action="{%url 'resetPassword'%}" method="POST">
             {%csrf_token%}
             <div class="form-group">
-                 <input type="email" class="form-control" placeholder="Email Address" name="email" >
+                 <input type="password" class="form-control" placeholder="Crea nuova password" name="password" >
                 </div> <!-- form-group// -->
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" name="password">
+                <input type="password" class="form-control" placeholder="Conferma nuova password" name="confirm_password">
               </div> <!-- form-group// -->
               
-              <div class="form-group">
-                <a href="{%url 'forgotPassword'%}" class="float-right">Hai dimenticato la password?</a> 
                 
-              </div> <!-- form-group form-check .// -->
               <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                <button type="submit" class="btn btn-primary btn-block"> Reset  </button>
               </div> <!-- form-group// -->    
           </form>
           </div> <!-- card-body.// -->
@@ -43,9 +31,6 @@
         <p class="text-center mt-4">Non sei registrato? <a href="{%url 'register'%}">Registrati</a></p>
         <br><br>
         <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-        
-        {%endif%}
-        
       </section>
       <!-- ========================= SECTION CONTENT END// ========================= -->
     
