--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,36 @@
 
 <title>LTCBoxOffice | Piattaforma prevendita biglietti</title>
 
+<style type="text/css" media="screen">
+
+        body.with-cookie-bar {
+        
+        padding-top: 35px;
+        
+        }
+        
+        .cookie-bar {
+        
+        position: fixed;
+        
+        width: 100%;
+        
+        top:0;
+        
+        text-align:center;
+        
+        height:25px;
+        
+        line-height: 25px;
+        
+        background: #eee;
+        
+        }
+        
+        </style>
+
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
+
 
 <!-- jQuery -->
 <!-- <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script> -->
@@ -28,6 +57,10 @@
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+
+<!-- Paypal Script -->
+<script src="https://www.paypal.com/sdk/js?client-id=AV48SpnVAilJKumklEog6Wu5__aOSRCu_nox9MWV5OJthtJ6RlvMFWomeM2co3iEQMVB8PHqYOUse-PD&currency=EUR"></script>
+
 
 <script type="text/javascript">
 /// some script
