--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -19,45 +19,45 @@
                                 <div class="form-row">
                                     <div class="col form-group">
                                         <label for="">Nome</label>
-                                        <input type="text" name="first_name" class="form-control" value="{{ userprofile.user.first_name }}"  required>
+                                        <input type="text" name="first_name" class="form-control" value="{{ user_data.first_name }}"  required>
                                     </div>
                                     <div class="col form-group">
                                         <label for="">Cognome</label>
-                                        <input type="text" name="last_name" class="form-control" value="{{ userprofile.user.last_name }}"  required>
+                                        <input type="text" name="last_name" class="form-control" value="{{ user_data.last_name }}"  required>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col form-group">
                                         <label for="">Email</label>
-                                        <input type="email" name="email" class="form-control" value="{{ userprofile.user.email }}"  required>
+                                        <input type="email" name="email" class="form-control" value="{{ user_data.email }}"  required>
                                     </div>
                                     <div class="col form-group">
                                         <label for="">Telefono</label>
-                                        <input type="text" name="phone" class="form-control" value="{{ userprofile.user.phone_number }}"  required>
+                                        <input type="text" name="phone" class="form-control" value="{{ user_data.phone }}"  required>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col form-group">
                                         <label for="">Indirizzo linea 1</label>
-                                        <input type="text" name="address_line_1" class="form-control" value="{{ userprofile.address_line_1 }}"  required>
+                                        <input type="text" name="address_line_1" class="form-control" value="{{ user_data.address_line_1 }}"  required>
                                     </div>
                                     <div class="col form-group">
                                         <label for="">Indirizzo linea 2</label>
-                                        <input type="text" name="address_line_2" class="form-control" value="{{ userprofile.address_line_2 }}" >
+                                        <input type="text" name="address_line_2" class="form-control" value="{{ user_data.address_line_2 }}" >
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col-4 form-group">
                                         <label for="">CAP</label>
-                                        <input type="text" name="post_code" class="form-control" value="{{ userprofile.post_code }}"  required>
+                                        <input type="text" name="post_code" class="form-control" value="{{ user_data.post_code }}"  required>
                                     </div>
                                     <div class="col-6 form-group">
                                         <label for="">Città</label>
-                                        <input type="text" name="city" class="form-control" value="{{ userprofile.city }}"  required>
+                                        <input type="text" name="city" class="form-control" value="{{ user_data.city }}"  required>
                                     </div>
                                     <div class="col-2 form-group">
                                         <label for="">Provincia</label>
-                                        <input type="text" name="province" class="form-control" value="{{ userprofile.province }}"  required>
+                                        <input type="text" name="province" class="form-control" value="{{ user_data.province }}"  required>
                                     </div>
                                 </div>
                                 <div class="form-row">
