--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -5,7 +5,7 @@
     <!-- ========================= SECTION CONTENT ========================= -->
     <section class="section-conten padding-y bg">
 
-        {% include 'includes/alert.html' %}
+        {% include 'includes/alerts.html' %}
     
             <div class="container">
                 <div class="row">
