--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -7,7 +7,7 @@
     <!-- ============================ COMPONENT REGISTER   ================================= -->
         <div class="card mx-auto" style="max-width:620px; margin-top:40px;">
           <article class="card-body">
-            {%include 'includes/alert.html'%}
+            {%include 'includes/alerts.html'%}
             <header class="mb-4"><h4 class="card-title">Registrazione</h4></header>
             <form action="{%url 'register'%}" method="POST">
                 {%csrf_token%}
